WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287012
http/tests/pdf/linearized-pdf-in-iframe.html is crashing at WTF::Lock::assertIsOwner() under PDFPluginBase::streamedBytesForDebugLogging()
https://bugs.webkit.org/show_bug.cgi?id=287012
Summary
http/tests/pdf/linearized-pdf-in-iframe.html is crashing at WTF::Lock::assert...
Abrar Rahman Protyasha
Reported
2025-02-04 03:57:32 PST
rdar://144058653
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-02-04 04:02:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39983
EWS
Comment 2
2025-02-24 14:38:30 PST
Test gardening commit
290984@main
(85281022afdc): <
https://commits.webkit.org/290984@main
> Reviewed commits have been landed. Closing PR #41235 and removing active labels.
Abrar Rahman Protyasha
Comment 3
2025-04-14 16:42:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44075
EWS
Comment 4
2025-04-14 16:58:22 PDT
Test gardening commit
293689@main
(139b49249068): <
https://commits.webkit.org/293689@main
> Reviewed commits have been landed. Closing PR #44075 and removing active labels.
EWS
Comment 5
2025-04-21 15:01:36 PDT
Test gardening commit
293936@main
(524ee121306d): <
https://commits.webkit.org/293936@main
> Reviewed commits have been landed. Closing PR #44342 and removing active labels.
EWS
Comment 6
2025-04-29 08:59:32 PDT
Committed
294270@main
(361024dd33d2): <
https://commits.webkit.org/294270@main
> Reviewed commits have been landed. Closing PR #39983 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug